src/objects/VPM_PurchasingRequests__c.object
<CustomObject>
    <fields>
        <fullName>VPM_DeletionBlockFlag__c</fullName>
        <description>VPM - Used by the MDM Ops Team to denoted the request is for Deletion / Block, Unblock &amp; UnDeletion.</description>
        <label>Deletion/Block Flag</label>
        <picklist>
            <picklistValues>
                <fullName>MDM Ops Review - Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Ops Review - Unblock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Ops Review - Delete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Ops Review - Undelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Ops Review - Unblock - Undelete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDM Ops Review - Block - Delete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_DepartmentNumber__c</fullName>
        <description>VPM - This field is used to store the value of Department Number.</description>
        <label>Department Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Description__c</fullName>
        <description>VPM - This field is used to store the value of Description.</description>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DetailsOfPlannedActivitiesQual__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>VPM - Used to populate fields in SAP BPM used for Procurement audit. Requested to be defaulted to &apos;N/A&apos; at all times so the integration with SAP BPM can create a record successfully</description>
        <label>Details of Planned Activities</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DetailsOfPlannedActivitiesSour2__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>VPM - Used to populate fields in SAP BPM used for Procurement audit. Requested to be defaulted to &apos;N/A&apos; at all times so the integration with SAP BPM can create a record successfully</description>
        <label>Details of Planned Activities</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DetailsOfPlannedActivitiesSour__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>VPM - Used to populate fields in SAP BPM used for Procurement audit. Requested to be defaulted to &apos;N.A&apos; at all times so the integration with SAP BPM can create a record successfully</description>
        <label>Details of Planned Activities</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DetailsTypeCheck__c</fullName>
        <defaultValue>&quot;N/A&quot;</defaultValue>
        <description>VPM - Based on the Supplier Financial Stability Check.</description>
        <label>Details of Type of Check</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VPM_District__c</fullName>
        <description>VPM - This field is used to store the value of District.</description>
        <label>District</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DocIndexActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Doc Index Active.</description>
        <label>Doc Index Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_DunnProcedure__c</fullName>
        <description>VPM - This field is used to store the value of Dunn Procedure.</description>
        <label>Dunn Procedure</label>
        <picklist>
            <picklistValues>
                <fullName>0001_three-level dunning notice SAGIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0003_Payment reminder, every two weeks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0005_Four-level dunning notice, every two weeks, RE forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4116_Dunning procedure Hungary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4545_Dunning procedure MSO Romania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4626_Dunning procedure Croatia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4695_Dunning procedure MSO Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5016_Dunning procedure Slovenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5199_Dunning procedure MSO Serbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z_VL_Dunning procedure Vlaardingen (SU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z001_Dunning Procedure for UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z002_Dunning procedure UBF Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z003_Dunning procedure Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z004_Dunning Procedure Denmark 2 Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z005_Dunning Procedure Finland 2 Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z006_Dunning procedure Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z007_Dunning procedure Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z008_Dunning procedure France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z009_Dunning procedure Germany - UBFD Retail -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z010_Dunning procedure Germany - UBFD Food Solutions -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z011_Dunning procedure Germany - LI / FFI -</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z012_Dunning Procedure Sweden 1 Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z013_Dunning Procedure Sweden 3 Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z014_Dunning Procedure Denmark 3 Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z015_Dunning Procedure Finland 1 Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z016_Dunning Procedure Switerzland 3 Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z017_Dunning procedure Austria 4 Levels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z018_Dunning procedure Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z019_Dunning procedure Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z020_Dunning procedure Slovakia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_DunnRecipient__c</fullName>
        <description>VPM - This field is used to store the value of Dunn Recipient.</description>
        <label>Dunn Recipient</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_DunningBlock__c</fullName>
        <description>VPM - This field is used to store the value of Dunning Block.</description>
        <label>Dunning Block</label>
        <picklist>
            <picklistValues>
                <fullName>_Freed for dunning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*_Dunning interface</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1_Blocked - Query logged against invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A_Dunning block - Mayor accounts (manual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B_Manual block reason B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D_Disputed Item</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H_Block reason H</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>K_Kaas invoices no dunning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R_Blocked by invoice verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z_Blocked for Dunning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_DunningClerk__c</fullName>
        <description>VPM - This field is used to store the value of Dunning Clerk.</description>
        <label>Dunning Clerk</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_DunningLevel__c</fullName>
        <description>VPM - This field is used to store the value of Dunning Level.</description>
        <label>Dunning Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ECCNo__c</fullName>
        <description>VPM - This field is used to store the value of DELECC No.</description>
        <label>DELECC No.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ECCSystem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field tracks  if it is in ECC system.</description>
        <label>ECC System</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_ECC_InsertUpdateStatusMessage__c</fullName>
        <description>VPM - Field to store response message which comes from ECC Service call.</description>
        <label>ECC Insert/Update Status Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VPM_ECC_InsertUpdateStatus__c</fullName>
        <description>VPM - Field to store status of ECC service call result.</description>
        <label>ECC Insert/Update Status</label>
        <picklist>
            <picklistValues>
                <fullName>Failed to Submit to ECC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECC Insert / Update Succeeded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Code Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ECC__c</fullName>
        <description>VPM - Field to hold details of ECC relating to Vendor.</description>
        <label>ECC</label>
        <picklist>
            <picklistValues>
                <fullName>Sirius</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cordillera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U2K2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_E_Invoicing_Agreed__c</fullName>
        <description>VPM - To be added to Procurement At a Glance fields.</description>
        <label>E-Invoicing Agreed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Email2__c</fullName>
        <description>VPM - This field is used to store the value of E-mail 2</description>
        <label>E-mail 2</label>
        <length>241</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Email3__c</fullName>
        <description>VPM - This field is used to store the value of Email 3.</description>
        <label>E-mail 3</label>
        <length>241</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_EmailCompanyCode__c</fullName>
        <description>ECC company code field to be used on email templates</description>
        <formula>VPM_VendorCodeLookup__r.mdm_Code__c</formula>
        <label>Company Code For Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_EmailOfWebformSender__c</fullName>
        <description>VPM - This field is used to store the value of Email of Webform Sender.</description>
        <label>Email of Webform Sender</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>VPM_EqualisationTax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Equalisation Tax.</description>
        <label>Equalisation Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_ExcIndVendor__c</fullName>
        <description>VPM - This field is used to store the value of Exc. Ind. Vendor.</description>
        <label>Exc. Ind. Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExceptionType__c</fullName>
        <description>VPM - Used as part of the Procurement Approval Golden Data; required data in SAP BPM for a Create.</description>
        <label>Exception Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Body</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Minder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Freelance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ExciseDivision__c</fullName>
        <description>VPM - This field is used to store the value of Excise Division.</description>
        <label>Excise Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExciseRange__c</fullName>
        <description>VPM - This field is used to store the Excise Range allowed to the Vendor.</description>
        <label>Excise Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExciseRegNo__c</fullName>
        <description>VPM - This field is used to store the value of Excise Reg. No.</description>
        <label>Excise Reg. No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExemptionFrom__c</fullName>
        <description>VPM - This field is used to store the value of Exemption From.</description>
        <label>Exemption From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPM_ExemptionNumber__c</fullName>
        <description>VPM - This field is used to store the Exemption Number given to the vendor.</description>
        <label>Exemption Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExemptionRate__c</fullName>
        <description>VPM - This field is used to store the value of Exemption Rate allowed to the the vendor.</description>
        <label>Exemption Rate</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExemptionTo__c</fullName>
        <description>VPM - This field is used to store the value of Exemption To.</description>
        <label>Exemption To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VPM_ExtManufacturer__c</fullName>
        <description>VPM - This field is used to store the value of Ext Manufacturer.</description>
        <label>Ext Manufacturer</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExtensionPhone__c</fullName>
        <description>VPM - This field is used to stores the Extension 1 number.</description>
        <label>Extension 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ExtensionType__c</fullName>
        <description>VPM - Field to distinguish between Global and Regional extends.</description>
        <label>Extension Type</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_ExternalMFG__c</fullName>
        <description>VPM - This field is used to store the value of External MFG.</description>
        <label>External MFG</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_FLSApproval__c</fullName>
        <description>VPM- Time when the FLS approves the request.</description>
        <label>FLS Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VPM_FLSInCountryReqVen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value whether the country is a FLS or Non FLS country.</description>
        <label>FLS In Country Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_FLSReworks__c</fullName>
        <defaultValue>0</defaultValue>
        <description>VPM- Number of time FLS requests rework.</description>
        <label>FLS Reworks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_FaxExtension__c</fullName>
        <description>VPM - This field is used to stores the Fax Extension Number of the Vendor.</description>
        <label>Fax Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Fax__c</fullName>
        <description>VPM - This field is used to stores the Fax number.</description>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_Fieldtype__c</fullName>
        <description>VPM - check for the field type whether its global/regional/Both.</description>
        <label>VPM_Fieldtype</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_FinanceApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - Checkbox used to determine whether Finance Approval is required. Set, if necessary in Purchasing Request Advanced Form Flow.</description>
        <label>Finance Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_FinanceApproval__c</fullName>
        <description>VPM-When Finance approved the request</description>
        <label>Finance Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VPM_FinanceReworls__c</fullName>
        <defaultValue>0</defaultValue>
        <description>VPM-  Number of time Finance requests for rework.</description>
        <label>Finance Reworls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_FinanceSubmitted__c</fullName>
        <description>VPM - System field used to record that Finance have finished with their changes to the form details. This field triggers Process Builder to handle other elements of the process. Not integrated with SAP.</description>
        <label>Finance Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_Finance_Team_Section__c</fullName>
        <description>VPM - This field is used to store the value of Finance Team Section.</description>
        <label>Finance Team Section</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_FinancialFieldsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - set to true when the user edits the financial section on advanced form.</description>
        <label>Financial Fields Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_FiscalAddress__c</fullName>
        <description>VPM - This field is used to store the value of Vendor Fiscal Address.</description>
        <label>Fiscal Address</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_ForaNewPartnerLinktoexistingTrade__c</fullName>
        <description>VPM - This field is used to store the value of New Partner-Link to Existing Trade Vendor.</description>
        <label>New Partner-Link to Existing Trade Ven</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_FreeText1__c</fullName>
        <description>VPM - This field is used to store the value of Free Text 1.</description>
        <label>Free Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_FreeText2__c</fullName>
        <description>VPM - This field is used to store the value of Free Text 2.</description>
        <label>Free Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_FreightApprovalRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Freight Approval Required for the record.</description>
        <label>Freight Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_FreightApproval__c</fullName>
        <description>VPM- Time when the Freight approves the request.</description>
        <label>Freight Approval</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VPM_FreightReworks__c</fullName>
        <defaultValue>0</defaultValue>
        <description>VPM- Number of time Freight requests rework.</description>
        <label>Freight Reworks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_FreightSubmitted__c</fullName>
        <description>VPM - This field is used to store the value of Freight Submitted.</description>
        <label>Freight Submitted</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_GRbasedIV__c</fullName>
        <defaultValue>true</defaultValue>
        <description>VPM - This field is used to store the value of GR based IV.</description>
        <label>GR based IV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_GeneralVendorDetailsChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - set to true when the user edits the general vendor details section on advanced from.</description>
        <label>General Vendor Details Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_GlobalAuthorisationGroup__c</fullName>
        <description>VPM - This field is used to store the value of Global Authorisation Group</description>
        <label>Global Authorisation Group</label>
        <picklist>
            <controllingField>VPM_VendorType__c</controllingField>
            <picklistValues>
                <fullName>3PM--3Pm America&apos;s_VMBA 3PM America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM--3PM Europe_VMBA 3PM Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM--3PM NAMCA, TUII, South Africa &amp; RUB_VMBA 3PM NAMCA South Afr RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3PM--3PM South &amp; North Asia &amp; SEAA_VMBA 3PM Asia SEAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Fragrances &amp; Flavours_VMBA Fragrances Flavors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Functional Chemicals_VMBA Functional Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Inorganics_VMBA Inorganics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Oleochemicals_VMBA Oleochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Petrochemicals_VMBA Petrochemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemicals--Speciality Chemicals_VMBA Speciality Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Liquid Oils_VMBA Liquid Oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Risk - Food Soft Commoditie_VMBA Food Soft Commodities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Risk - Oils &amp; Fats_VMBA Risk Oils and Fats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Risk - Petro Based_VMBA Petro Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Soft Commodities_VMBA Soft Commodities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities--Tropical Oils_VMBA Tropical Oils</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee_Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freight_Freight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingredients--Ingredients 1_VMBA Ingredients 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingredients--Ingredients 2_VMBA Ingredients 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ingredients--Ingredients 3_VMBA Ingredients 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany_VMBA Intercompany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercompany Transfer_VMBA Intercompany Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--HR_VMBA HR TRAVEL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Innovation &amp; Professional Services_VMBA Outsourcing Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--IT_VMBA IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Lakme Lever Ltd_VMBA Lakme Lever Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Marketing Materials_VMBA MRKTNG MATERIALS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Marketing Services_VMBA MARKTNG SRVCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBS--Other_MBS--Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_GlobalFieldChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM- set to true when the global fields are changed.</description>
        <label>Global Data Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_GrantDiscInKind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPM - This field is used to store the value of Grant Disc in Kind.</description>
        <label>Grant Disc in Kind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VPM_GroupingKeyDunning__c</fullName>
        <description>VPM - Stores the Grouping Key for Dunning Data related to Company Code.</description>
        <label>Grouping Key (Dunning)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_GroupingKey__c</fullName>
        <description>VPM - This field is used to store the value of Grouping Key (Auto Payment).</description>
        <label>Grouping Key (Auto Payment)</label>
        <picklist>
            <picklistValues>
                <fullName>Grouping Key 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grouping Key 2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VPM_HeadOfficeAccountNumber__c</fullName>
        <description>VPM - This field is used to store the value of Head Office Account Number.</description>
        <label>Head Office Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithBankValidator__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Amount of time for which request is being worked upon by Bank Data Validator .</description>
        <label>Hours Spent With Bank Validator</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithFLS__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Number of days for which request is being worked upon by FLS team.</description>
        <label>Hours Spent With FLS</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithFinance__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Number of days for which request is being worked upon by Finance Team.</description>
        <label>Hours Spent With Finance</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithFreight__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Number of days for which request is being worked upon by Freight Team</description>
        <label>Hours Spent With Freight</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithMDMOps__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Number of days request was worked upon by MDM Ops.</description>
        <label>Hours Spent With MDM Ops</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithProcurement__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Days for which request was worked upon by Procurement Team.</description>
        <label>Hours Spent With Procurement</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VPM_HoursSpentWithRussianCustomTax__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>VPM - Number of days for which request is being worked upon byRussian Custom Tax Team</description>
        <label>Hours Spent With Russian Custom Tax</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
</CustomObject>